# lispum

./: README.md  lispum.cabal  stack.yaml
src/: Lisp.hs  LispEvaluator.hs  LispParser.hs  Main.hs  Prompt.hs
src/Parsing/: Combinators.hs  Primitives.hs  Token.hs
test/Parsing/: CombinatorsSpec.hs  PrimitivesSpec.hs
