name:                lispum
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/doom/lispum#readme
license:             BSD3
license-file:        LICENSE
author:              Clément Doumergue
maintainer:          clement.doumergue@epitech.eu
copyright:           2019 Clément Doumergue
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable lispum
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       , containers >= 0.6.0.1
                       , mtl
                       , synapto
  other-modules:
      Prompt
      Lisp
      LispParser
      LispEvaluator
